# p1_talera

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  order_create.json  order_patch.json  pyproject.toml  requirements.txt
app/: config.py  main.py
app/domain/: entities.py  errors.py  models.py
app/infra/: logging.py  metrics.py  mongo.py
app/routes/: health.py  metrics.py  orders.py
app/services/: orders_service.py
app/utils/: errors.py  idempotency.py  request_context.py
tests/: conftest.py  test_domain_state_machine.py  test_error_matrix.py  test_health.py  test_orders_api.py
